[package]
name = "combined_str"
version = "0.4.2"
edition = "2024"
description = "Zero-copy, const-generic string combinator for no_std environments"
license = "MIT"

[features]
default = ["alloc"]
alloc = []
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
